--- a/src/css/14-l.css
+++ b/src/css/14-l.css
@@ -11,7 +11,7 @@
 		display: flex;
 	}
 
-	.menu li > a {
+	.menu li > .menu-item {
 		font-size: 1em;
 	}
 
@@ -20,11 +20,11 @@
 		height: 100px;
 	}
 
-	.header-container .toggle-main-menu-wrapper a {
+	.header-container .toggle-main-menu-wrapper .header-button {
 		display: none; /* No main menu button on large screens */
 	}
 
-	.menu-language-choice li > a, .menu-music li > a {display: block;}
+	.menu-language-choice li > .menu-item, .menu-music li > .menu-item {display: block;}
 
 
 /*============== Language Menu ==============*/
@@ -32,7 +32,7 @@
 		align-items: flex-end;
 	}
 
-	.header-container .toggle-language-wrapper > a {
+	.toggle-language-wrapper > .header-button {
 		border-bottom: 0 none;
 		border-radius: 4px;
 		font-size: 1em;
@@ -71,7 +71,7 @@
 		width: inherit;
 	}
 
-	.menu-main > ul, .menu-main > ul > li, .menu-main > ul > li > a {
+	.menu-main > ul, .menu-main > ul > li, .menu-main > ul > li > .menu-item {
 		display: inline-block;
 		text-align: initial;
 	}
@@ -85,14 +85,14 @@
 		padding: 0;
 	}
 
-	.menu-main > ul > li > a {
+	.menu-main > ul > li > .menu-item {
 		border-bottom: 0 none;
 		border-radius: 4px;
 		padding: 6px 8px;
 	}
 
 	/* expanded menus button spacing */
-	.menu-main > ul > li > a .icon, .header-container .toggle-language-wrapper .icon {
+	.menu-main > ul > li > .menu-item .icon, .header-container .toggle-language-wrapper .icon {
 		margin: 0 4px 0 2px;
 	}
 
@@ -103,11 +103,11 @@
 		flex-flow: column;
 		text-align: initial;
 	}
-	.menu-music li:first-child a {padding-top: 12px;}
+	.menu-music li:first-child .menu-item {padding-top: 12px;}
 
 
 /*============== Playlist Menu ==============*/
-	.menu-playlist li > a {font-size: 0.9em;}
+	.menu-playlist li > .menu-item {font-size: 0.9em;}
 
 
 /*============== Content ==============*/
