fixed the initial flash of unstyled content; only legacy css is loaded dynamically, but the file size is reduced to minimum

--- a/src/css/12-s.css
+++ b/src/css/12-s.css
@@ -11,7 +11,7 @@
 	}
 
 	.menu-playlist-wrapper {bottom: 2.5em;}
-	.menu-playlist {height: calc(80vh - 2.5em);}
+	.menu-playlist {max-height: calc(80vh - 2.5em);}
 	.menu-playlist .playlist-time {margin-left: 10px;}
 
 	.ajax-loader-spinning {width: 163px;}
