--- a/src/css/10-base.css
+++ b/src/css/10-base.css
@@ -136,6 +136,7 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
 .menu-playlist {
 	border-radius: 10px;
 	margin: 12px 6px 0 0;
+	max-height: 250px; /* Legacy browsers only. It is overridden with "modern" rules in screen size files. */
 	overflow-y: auto;
 }
 .menu-playlist .playlist-unavailable-label {display: none; margin: 12px;}
