--- a/src/css/13-m.css
+++ b/src/css/13-m.css
@@ -99,7 +99,7 @@
 	}
 
 	.menu-playlist-wrapper {bottom: 2.5em;}
-	.menu-playlist {height: calc(60vh - 2.5em);}
+	.menu-playlist {max-height: calc(60vh - 2.5em);}
 	.menu-playlist .playlist-time {margin-left: 10px;}
 
 
