--- a/src/css/12-s.css
+++ b/src/css/12-s.css
@@ -34,7 +34,7 @@
 	footer .copyright {margin-right: 15px;}
 	footer .copyright-first-year, footer .copyright-ds {display: inline;}
 
-	.content-tune .tune-title, .content-tune .tune-release-date, .content-tune .tune-links {text-align: unset;}
+	.content-tune .tune-title, .content-tune .tune-release-info, .content-tune .tune-links {text-align: unset;}
 
 	.content-discography .album-contents-wrapper {flex-flow: row;}
 	.content-discography .album-cover {margin-right: 1.33em;}
