--- a/src/css/00-colors.css
+++ b/src/css/00-colors.css
@@ -15,10 +15,11 @@
 	--menu-icon-inactive-color: #888;
 	--menu-item-hovered: white;
 
-
 	--menu-separator-strong: #666;
 	--menu-separator-medium: #555;
 	--menu-separator-soft: #444;
+
+	--menu-border-strong: 1px solid var(--menu-separator-strong);
 
 	--shadow-bottom: 0 3px 5px rgba(50, 50, 50, 0.57);
 	--shadow-top: 0 -3px 5px rgba(50, 50, 50, 0.57);
@@ -57,13 +58,14 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 	color: var(--menu-text-color);
 }
 
+.menu-playlist {border-top: 1px solid var(--menu-icon-inactive-color);}
 .menu-playlist-wrapper {
 	background: var(--menu-background-color);
-	border-right: 1px solid var(--menu-separator-strong);
-	border-top: 1px solid var(--menu-separator-strong);
+	border-right: var(--menu-border-strong);
+	border-top: var(--menu-border-strong);
 }
 
-.menu li > .menu-item {border-bottom: 1px solid var(--menu-separator-strong);}
+.menu li > .menu-item {border-bottom: var(--menu-border-strong);}
 .menu .menu-item, .header-container .header-button, footer a, .player .player-button {
 	background: none;
 	color: var(--menu-text-color);
@@ -72,10 +74,16 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 .menu .selected {
 	color: var(--menu-item-hovered);
 }
+.menu-language-choice li:first-child {border-top: var(--menu-border-strong);}
+@media screen and (max-width: 64em) {
+	.menu-main > ul li:first-child {border-top: var(--menu-border-strong);}
+}
+@media screen and (min-width: 64em) {
+	.menu-music ul {border-top: var(--menu-border-strong);}
+}
 
-.menu-playlist {border-top: 1px solid var(--menu-icon-inactive-color);}
 
-.player {border-top: 1px solid var(--menu-separator-strong);}
+.player {border-top: var(--menu-border-strong);}
 .player .disabled {color: var(--menu-icon-inactive-color);}
 .player .loading-indicator {color: var(--body-background-color);}
 .player .player-controls .player-button {border-left: 1px solid var(--menu-separator-medium);}
@@ -85,7 +93,6 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 
 .shadow-top {box-shadow: var(--shadow-top);}
 .shadow-bottom {box-shadow: var(--shadow-bottom);}
-
 
 /**
  * Link animations and special effects for desktop
@@ -107,7 +114,7 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 
 
 	.header-container .toggle-language-wrapper > .header-button {
-		border-right: 1px solid var(--menu-separator-strong);
+		border-right: var(--menu-border-strong);
 		border-top: 1px solid var(--menu-separator-soft);
 	}
 
@@ -117,7 +124,7 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 	}
 
 	.menu-main > ul > li > .menu-item {
-		border-left: 1px solid var(--menu-separator-strong);
+		border-left: var(--menu-border-strong);
 		border-top: 1px solid var(--menu-separator-soft);
 	}
 
