--- a/src/py/music/templates/music/albums.html
+++ b/src/py/music/templates/music/albums.html
@@ -30,16 +30,12 @@
 		<ol class="album-tracks">
 			{% for sd in song_descriptions %}
 
-				{% if sd.song.album_id == a.album_id %}
+				{% if sd.song.album_id == a.album_id and not sd.song.is_hidden %}
 					<li>
-						{% if sd.song.is_hidden %}
-							<span class="track-title">???</span>
-						{% else %}
-							<a class="track-title" href="{{ sd.song.get_absolute_url }}">
-								{{ sd.translated_title }}
-							</a>
-							<span class="track-length"> {{ sd.song.duration }} </span>
-						{% endif %}
+						<a class="track-title" href="{{ sd.song.get_absolute_url }}">
+							{{ sd.translated_title }}
+						</a>
+						<span class="track-length"> {{ sd.song.duration }} </span>
 					</li>
 				{% endif %}
 			{% endfor %}
