--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -47,7 +47,7 @@
 		<script>
 			PLAYER_MSG = {
 				errorLoadingTrack: '{% trans "Cannot load this song!" %}',
-				newLanguageWillInterruptMusic: `{% trans "Changing the language will interrupt music playback. Continue?" %}`
+				newLanguageWillInterruptMusic: "{% trans 'Changing the language will interrupt music playback. Continue?' %}"
 			};
 
 			function isOldBrowser() {
