--- a/src/css/00-colors.css
+++ b/src/css/00-colors.css
@@ -26,7 +26,7 @@
 }
 
 body {
-	background: var(--body-background-color);
+	background: var(--body-background-color) url(img/fon-ececec.png);
 	color: var(--body-text-color);
 }
 header, .content-wrapper {background-color: var(--body-background-mask);}
