fixed spelling mistakes and grammar

--- a/src/py/main/templates/main/index.html
+++ b/src/py/main/templates/main/index.html
@@ -9,12 +9,12 @@
 		<article>
 				<p>
 					{% blocktrans trimmed %}
-						Welcome the Black Blues Dimosaur's den (Latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
+						Welcome to the Black Blues Dimosaur's den (Latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
 					{% endblocktrans %}
 				</p>
 				<p>
 					{% blocktrans trimmed %}
-						If you are a fan of this kind of music, then jump straight ahead to the <a href="/{{ url_music }}">discography</a> to hear a song. Or if you are interested in the project's background and how it came to be, read more <a href="/{{ url_biography }}">about Dimmu Saurus</a>.
+						If you are a fan of this kind of music, then jump straight ahead to the <a href="/{{ url_music }}">discography</a> and hear a song. Or if you are interested in the project's background, read more <a href="/{{ url_biography }}">about Dimmu Saurus</a>.
 					{% endblocktrans %}
 				</p>
 		</article>
