--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -30,7 +30,7 @@
 
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic">
+			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic&amp;display=swap">
 
 		<link
 			rel="stylesheet"
@@ -38,7 +38,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" async="async"></script>
 
 		<script>
 			AJAXIFY_EXCLUDE = [
@@ -69,6 +69,7 @@
 
 
 			var js = document.createElement('script');
+			js.defer = 'defer';
 
 			if (isOldBrowser()) {
 				js.src = '{% static "ds.legacy.min.js" %}';
