--- a/src/css/13-m.css
+++ b/src/css/13-m.css
@@ -118,11 +118,14 @@
 		max-width: 65em;
 		width: auto;
 	}
+
 	.content-version .ascii-logo {
-		border-right: 1px solid;
 		font-size: 0.6em;
 		margin: 0 16px;
-		padding-right: 16px;
+	}
+	.content-version .version-info {
+		border-left: 1px solid;
+		padding-left: 16px;
 	}
 
 
@@ -189,4 +192,8 @@
 
 /*============== Player ==============*/
 	.player .track-progress-bar {display: none;}
+
+
+/*============== Content ==============*/
+	.content-version .version-info {max-width: 44%;}
 }
