--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -207,12 +207,12 @@
 						title="{% trans 'Dimmu Saurus on Facebook' %}"
 						href="https://www.facebook.com/dimmusaurus/"
 						target="_blank"
-						rel="me"><i class="fab fa-facebook-square"></i></a><a
+						rel="me noopener"><i class="fab fa-facebook-square"></i></a><a
 						class="youtube-link"
 						title="{% trans 'Dimmu Saurus Youtube channel' %}"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
 						target="_blank"
-						rel="me"><i class="fab fa-youtube"></i></a>
+						rel="me noopener"><i class="fab fa-youtube"></i></a>
 				</div>
 			</div>
 
