updated the copyright text in the footer to comply with the license

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -220,7 +220,7 @@
 				<span class="copyright-copy">&copy;</span>
 				<span class="copyright-first-year">2004-</span>
 				<span class="copyright-last-year">{% now "Y" %}</span>
-				<span class="copyright-ds">Димозавъръ</span>
+				<span class="copyright-ds">Димозавър</span>
 			</div>
 		</footer>
 
